populate both tables in loop
